fix code overflow

--- a/sass/_code.scss
+++ b/sass/_code.scss
@@ -16,4 +16,5 @@ pre {
   margin-bottom: 1rem;
   padding: 5px;
   font-size: 85%;
+  overflow-x: scroll;
 }
